Fixed scrolling trouble on mobile devices in ModalWrap

--- a/src/styles/modal.module.css
+++ b/src/styles/modal.module.css
@@ -191,3 +191,9 @@
         line-height: 1.4;
     }
 }
+
+@media screen and (orientation: landscape) {
+ .titleMobile {
+    transform: translateY(-3vw);
+ }
+}
